whitespaces fix

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -8,6 +8,7 @@ html,body{
     height: auto;
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
 }
 
 .body-banner-all{
@@ -135,6 +136,7 @@ a:hover{
     text-decoration: none;
     font-size: 1rem;
 }
+
 #about-me-container{
     display: flex;
     justify-content: space-between;
@@ -199,6 +201,7 @@ a:hover{
 .aboutImgAni{
     animation: fade-in 1.8s ease-in-out 0.5s both;
 }
+
 @keyframes fade-in {
     0% {
         opacity: 0;
@@ -1270,6 +1273,9 @@ footer{
         margin-left: 0;
     }
     
+    #projects{
+    margin-bottom: 10rem;
+    }
     
 
 }
